<resources>
    <string name="app_name">Olor A Libro</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email (user)</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_up">Sign up </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_contrasenya_olvidada"><u>Forgot your password? Click here!</u></string>
    <string name="mensaje_salir">¿Está seguro que desea Salir?</string>
    <string name="advertencia">Advertencia</string>
    <string name="cancelar">Cancelar</string>
    <string name="salir">Salir</string>
    <string name="logout_desc">¿Seguro que se desea desconectar?</string>
    <string name="desconectar">Desconectar</string>
    <string name="librerias">Librerias</string>
    <string name="libreriasCaps">LIBRERIAS</string>
    <string name="libreria">Libreria</string>
    <string name="actividades">Actividades</string>
    <string name="actividadesCaps">ACTIVIDADES</string>
    <string name="main">Main</string>
    <string name="perfil">Perfil</string>
    <string name="ranking">Ranking</string>
    <string name="cat_olvidat"><u>Has olvidat la contrassenya? Click aqui!</u></string>
    <string name="esp_olvidado"><u>Olvidaste la contraseña? ¡Click aquí!</u></string>
    <string name="error_passwords_not">The passwords are not the same</string>
    <string name="descripcion">Descripción: </string>
    <string name="lugar">Lugar: </string>
    <string name="tipo">Tipo: </string>
    <string name="fecha">Fecha: </string>
    <string name="hora">Hora: </string>
    <string name="libreriasAlt">Librerias: </string>
    <string name="comentarios">Comentarios: </string>
    <string name="enviar">Enviar</string>
    <string name="libros">Libros</string>
    <string name="actividad">Actividad</string>
    <string name="emailSpanish">Email (Usuario)</string>
    <string name="constrasenyaSpanish">Contraseña</string>
    <string name="entrarSpanish">Entrar</string>
    <string name="registrarseSpanish">Registrarse</string>
    <string name="mailCatala">Email (Usuari)</string>
    <string name="contrasenyaCatala">Contrassenya</string>
    <string name="entrarCatala">Entrar</string>
    <string name="registrarseCatala">Registrar-se</string>
    <string name="contrasenyaInvSpa">Esta contraseña es invalida</string>
    <string name="contrasenyaInvCat">Aquesta contrassenya és invalida</string>
    <string name="celdaSpanish">Esta celda es requerida</string>
    <string name="casellaCatala">Aquesta casella és requerida</string>
    <string name="emailNoSpanish">Este Email no es valido</string>
    <string name="emailNoCatala">Aquest Email no és incorrecte</string>
    <string name="invalidEng">Invalid username or password!</string>
    <string name="warning">Warning</string>
    <string name="invalidSpa">Usuario o contraseña invalidos!</string>
    <string name="advertenciaSpa">Advertencia</string>
    <string name="invalidCat">Usuari o contrassenya incorrectes</string>
    <string name="advertenciaCat">Advertència</string>
    <string name="ok">OK</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="exclamacion">!</string>
    <string name="errorClick">ERROR CLIC MAIN:</string>
    <string name="puntos1">puntos</string>
    <string name="rangoPerfil">(Rango)</string>
    <string name="descuentoPerfil">% de descuento</string>
    <string name="modificarContrasenya">Estás apunto de modificar la contraseña ¿Estás seguro?</string>
    <string name="siSpa">Sí</string>
    <string name="contrasenyaActual">Contraseña actual</string>
</resources>
