<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="100dp"
    android:paddingRight="100dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.LoginActivity"
    android:background="@drawable/puertamoria">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/ImgLogin"
        android:background="@null"/>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textColorHint="@color/negro"
                android:background="@color/blanco"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/negro">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:imeActionId="6"
                android:textColorHighlight="@color/negro"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textColorHint="@color/negro"
                android:background="@color/blanco" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@color/blanco"
                android:background="@color/negro" />
            <Button
                android:id="@+id/email_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_up"
                android:textStyle="bold"
                android:textColor="@color/blanco"
                android:background="@color/negro" />
            <TextView
                android:id="@+id/textViewSubrayado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_contrasenya_olvidada"
                android:textColor="@color/negro"
                android:textStyle="bold"
                android:textSize="20dp" />

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/language_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/spanish_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/espana"/>
        <ImageButton
            android:id="@+id/catalan_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/cataluna"/>
        <ImageButton
            android:id="@+id/english_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/uk"/>
    </LinearLayout>
</LinearLayout>