<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp"
    android:paddingLeft="100dp"
    android:paddingRight="100dp"
    android:paddingTop="100dp"
    android:orientation="vertical"
    android:background="@drawable/puertamoria"
    tools:context=".Activities.SignUpActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/ImgSignUp"
        android:background="@null"
        android:src="@drawable/loginlogofinal"/>
    <ScrollView
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lsignup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/email_signup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textColorHint="@color/negro"
                android:background="@color/blanco"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPassword1"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/negro">
                <EditText
                    android:id="@+id/password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:layout_marginTop="16dp"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/negro"
                    android:textColorHint="@color/negro"
                    android:background="@color/blanco" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPassword2"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/negro">
                <EditText
                    android:id="@+id/repite_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Repite Password"
                    android:layout_marginTop="16dp"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/negro"
                    android:textColorHint="@color/negro"
                    android:background="@color/blanco"/>
            </android.support.design.widget.TextInputLayout>
            <AutoCompleteTextView
                android:id="@+id/nombre2"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Your name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textColorHint="@color/negro"
                android:background="@color/blanco"/>
            <AutoCompleteTextView
                android:id="@+id/apellidos2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Your surname"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textColorHint="@color/negro"
                android:background="@color/blanco"/>
            <AutoCompleteTextView
                android:id="@+id/ciudad2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Your city"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textColorHint="@color/negro"
                android:background="@color/blanco"/>
            <Button
                android:id="@+id/reg_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_up"
                android:textStyle="bold"
                android:textColor="@color/blanco"
                android:background="@color/negro"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>