<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="80dp"
    android:paddingLeft="100dp"
    android:paddingRight="100dp"
    android:paddingTop="60dp"
    tools:context=".Activities.PerfilActivity"
    android:background="@drawable/fondomain">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/ImgSignUp1"
        android:background="@null"
        android:src="@drawable/profilelogo"/>
    <ScrollView
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lsignup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/email_signup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textColorHint="@color/negro"
                android:background="@color/blanco"/>
            <Button
                android:id="@+id/cambiar_constrasenya"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="26dp"
                android:layout_marginTop="16dp"
                android:text="Cambiar Contraseña"
                android:enabled="false"
                android:textStyle="bold"
                android:textColor="@color/blanco"
                android:background="@color/gris"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPassword2"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                app:passwordToggleEnabled="false"
                android:textColorHint="@color/negro">
                <EditText
                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:layout_marginTop="16dp"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/negro"
                    android:textColorHint="@color/negro"
                    android:background="@color/blanco" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
            android:id="@+id/inputPassword3"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:visibility="invisible"
            android:clickable="true"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/negro">
            <EditText
                android:id="@+id/repite_password3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Repite Password"
                android:layout_marginTop="16dp"
                android:visibility="invisible"
                android:imeActionId="6"
                android:clickable="true"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textColorHint="@color/negro"
                android:background="@color/blanco"/>
        </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPassword4"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:clickable="true"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/negro">
                <EditText
                    android:id="@+id/repite_password4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Repite Password"
                    android:visibility="invisible"
                    android:layout_marginTop="16dp"
                    android:imeActionId="6"
                    android:clickable="true"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/negro"
                    android:textColorHint="@color/negro"
                    android:background="@color/blanco"/>
            </android.support.design.widget.TextInputLayout>
            <AutoCompleteTextView
                android:id="@+id/nombre1"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Your name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textColorHint="@color/negro"
                android:background="@color/blanco"/>
            <AutoCompleteTextView
                android:id="@+id/apellidos1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Your surname"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textColorHint="@color/negro"
                android:background="@color/blanco"/>
            <AutoCompleteTextView
                android:id="@+id/ciudad1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Your city"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textColorHint="@color/negro"
                android:background="@color/blanco"/>
            <TextView
                android:id="@+id/puntos1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textSize="18sp"
                android:textColorHint="@color/negro"
                android:background="@color/blanco"/>
            <TextView
                android:id="@+id/rank1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textSize="18sp"
                android:textColorHint="@color/negro"
                android:background="@color/blanco"/>
            <TextView
                android:id="@+id/descuento1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/negro"
                android:textSize="18sp"
                android:textColorHint="@color/negro"
                android:background="@color/blanco"/>
            <Button
                android:id="@+id/perf_editar_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Editar"
                android:textStyle="bold"
                android:textColor="@color/blanco"
                android:background="@color/negro"/>
            <Button
                android:id="@+id/perf_aceptar_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Aceptar"
                android:enabled="false"
                android:textStyle="bold"
                android:textColor="@color/blanco"
                android:background="@color/gris"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>